fix(security): resolve dependency vulnerabilities and add audit tests
- Fix 7 high severity vulnerabilities via npm audit fix
- Update next to latest secure version
- Fix fast-xml-parser RangeError DoS vulnerability
- Add comprehensive dependency audit test suite
- Add test script to package.json

Closes #272

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
+    "test:security": "jest src/__tests__/security",
+    "test:watch": "jest --watch",
     "fetch-data": "./scripts/ingest.sh",
     "postinstall": "prisma generate"
   },
